# stock_ai_agent

./: .env.example  CLAUDE.md  master_prompt.md  pyproject.toml
.agent/rules/: CLAUDE.md
.agent/skills/prompt-engineering/: SKILL.md
.agent/skills/pydanticai-langgraph-agent/: SKILL.md
.agent/skills/stock-data-pipeline/: SKILL.md
.agent/skills/yfinance-stock-data/: SKILL.md
.agent/workflows/: create-skill.md
PRPs/models/: stock_data_db_model_hk.py  stock_data_db_model_us.py  stock_data_model.py  stock_data_model_hk.py  stock_data_model_us.py  stock_db.sql  stock_db_hk.sql  stock_db_us.sql
PRPs/stock_data_api/: akshare_finance_stock.ipynb  akshare_stock.py  prepare_hk_stock.py  prepare_stock_financial.py  prepare_stock_price_data.py  prepare_us_stock.py  stock_technicals_calculate.py  yahoo_finance.ipynb  yahoo_stock.py
docs/: PRD_stock_ai_agent.md  ai_coding_agent_setup.md  architecture.md  database_init.md  plan.md  task.md  technical_design.md
output/: akshare_github_data.json  yfinance_github_data.json
output/akshare/: SKILL.md
output/yfinance/: SKILL.md
scripts/db/: 001_extensions.sql  002_create_tables.sql  003_create_indexes.sql  004_create_vector_ivfflat_indexes.sql  005_validate_vector_search.sql  090_truncate_all.sql  091_drop_all.sql
stock_agent/: main.py
stock_agent/config/: __init__.py  settings.py
stock_agent/data_pipeline/: __init__.py  akshare_fetcher.py  embedding_pipeline.py  financial_fetcher.py  indicator_calculator.py  news_fetcher.py  question_sql_seeder_generate.py  question_sql_seeder_validate.py  run_pipeline.py  sql_examples_seeder.py  stock_question_sql_bak.json  stock_question_sql_example.json  stock_question_sql_seed.json  yfinance_fetcher.py
stock_agent/database/: session.py
stock_agent/services/: embedding.py  llm.py  rag.py
tests/unit/: test_embedding.py  test_llm.py  test_log_repository.py  test_question_sql_seeder_validate.py  test_rag.py  test_sql_examples_seeder.py  test_vector_repositories.py
(+34 files in other folders)
