[project]
name = "stock-ai-agent"
version = "0.1.0"
description = "Stock AI Agent - LLM-powered stock analysis assistant"
requires-python = ">=3.12"

dependencies = [
    # ---- Web Framework ----
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # ---- LLM & Agent ----
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic-ai>=0.0.14",
    "openai>=1.50",
    "google-generativeai>=0.8",
    "zhipuai>=2.1",
    # ---- Database ----
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "supabase>=2.0",
    # ---- Data Fetching ----
    "akshare>=1.14",
    "yfinance>=0.2.40",
    # ---- Computation ----
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.17",
    "ta-lib>=0.6.8",
    # ---- Utilities ----
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "tenacity>=9.0",
    "httpx>=0.27",
    # ---- Frontend (MVP) ----
    "streamlit>=1.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_agent"]

# ---- Ruff ----
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["stock_agent"]

# ---- MyPy ----
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ---- Pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
